# PipelineDP

./: pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  tests.yml
pipeline_dp/: __init__.py  pipeline_backend.py
