[project]
name = "pipeline-dp"
version = "0.2.2rc2"
description = "A library for differentially private data analysis pipelines."
authors = [{ name = "Chinmay Shah", email = "chinmayshah3899@gmail.com" }, { name = "Vadym Doroshenko", email = "dvadym@google.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.15"
keywords = ["differential privacy", "data analysis", "apache beam", "pyspark", "dp"]

dependencies = [
    "python-dp (>=1.1.5rc11,<2.0.0)",
    "numpy (>=1.20.1,<2.0.0)",
    "dill (>=0.3.7)",
]

[tool.poetry.group.dev.dependencies]
# Code Quality & Linting
yapf = "^0.43.0"
pylint = "^3.2.0"          # Python 3.12+ AST changes require Pylint 3.x

# Testing
pytest = "^8.2.0"          # Better Python 3.12+ support
pytest-timeout = "^2.3.1"

# Building & Packaging
twine = "^6.0.0"           # Modern metadata & PyPI publishing
wheel = "^0.45.0"
setuptools = "^75.0.0"     # Modern PEP 517/621 improvements
poetry-core = "^2.0.0"     # Keeping up with poetry spec

# Data Science & Heavy Compute (Supporting Py3.11 - 3.14 & NumPy 2.x)
scipy = "^1.14.0"          # Official Python 3.13 & NumPy 2.x wheels
pandas = "^2.2.0"
pyspark = "^3.5.0"         # Minimum for modern Python runtimes; if you can, use >=4.0.0 for Py3.13+
apache-beam = "^2.70.0"    # Added official Py 3.13 support
dp-accounting = "^0.6.0"   # Fine as is if it's pure-python, otherwise ^0.7.0+ if available

# Versioning & Utilities
bump-my-version = "^1.2.1"
absl-py = "^2.1.0"

[tool.yapf]
based_on_style = "google"
indent_width = 4

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Fixes docutils install on Python 3.11
# See https://github.com/python-poetry/poetry/issues/9293#issuecomment-2048205226
[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

